# task_base_proto

./: COPYRIGHT  README.md  SConstruct  setup.cfg  setup.py
doc/: conf.py  index.rst  manifest.yaml
doc/_static/task_base/: README.md
doc/lsst.pipe.base/: creating-a-pipeline.rst  creating-a-pipelinetask.rst  index.rst
examples/PipelineTask_Examples/: aperturePipelineTaskV2.py  aperturePipelineTaskV3.py  aperturePipelineTaskV4.py  aperturePipelineTaskV5.py  aperturePipelineTaskV6.py  aperturePipelineTaskV7.py  aperturePipelineTaskV8.py  aperturePipelineTaskV9.py
python/lsst/pipe/base/: __init__.py  config.py  makeLightWeightButler.py  task.py
python/lsst/task/base/: __init__.py  struct.py  task.py  timer.py  yaml.py
python/lsst/task/base/tests/: README.rst
tests/: test_showTasks.py  test_struct.py  test_task.py  test_task_metadata.py
ups/: pipe_base.cfg  pipe_base.table  task_base.cfg  task_base.table
