[metadata]
name = task_base
description = Task base
author = Rubin Observatory Data Management

[options]
zip_safe = True
package_dir=
    =python
packages=find:

[options.packages.find]
where=python

[flake8]
max-line-length = 110
max-doc-length = 79
ignore = E133, E226, E228, N802, N803, N806, N812, N815, N816, W503
exclude =
    __init__.py,
    yacc.py
    lex.py

[tool:pytest]
addopts = --flake8
flake8-ignore = E133 E226 E228 N802 N803 N806 N812 N815 N816 W503
  tests/data/*
